Message text enhancements
Use colons after "Error" for consistency, fix capitalization issues,
expand some abbreviations, move trailing spaces from messages to code,
wording clarifications, etc.

See also:
https://translatewiki.net/wiki/Thread:Support/About_MediaWiki:Debugtemplates-intro/en
https://translatewiki.net/wiki/Thread:Support/About_MediaWiki:Debugtemplates-summary/en
https://translatewiki.net/wiki/Thread:Support/About_MediaWiki:Debugtemplates-radio-descend/es

Change-Id: I578288ed2a014f266d680ab40e8062a2367a0dd7

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,44 +1,45 @@
 {
     "@metadata": {
         "authors": [
-            "Clark Verbrugge"
+            "Clark Verbrugge",
+            "Purodha Blissenbach"
         ]
     },
     "debugtemplates": "Debug Templates",
-    "debugtemplates-form": "Input Area",
+    "debugtemplates-form": "Input area",
     "debugtemplates-desc": "A simple debugger for templates",
-    "debugtemplates-summary": "Adds a special page which provides an interface for debugging template expansions.",
+    "debugtemplates-summary": "Adds a [[special:DebugTemplates|special page]] which provides an interface for debugging template expansions.",
     "debugtemplates-api": "URL for making API calls (informational only)",
     "debugtemplates-title": "Page title (optional, for context only)",
     "debugtemplates-args-title": "Parameters",
     "debugtemplates-args-name": "Name",
-    "debugtemplates-args-eval": "Eval All",
+    "debugtemplates-args-eval": "Eval all",
     "debugtemplates-args-set": "Set?",
     "debugtemplates-args-value": "Value",
     "debugtemplates-args-eval-all": "Eval",
-    "debugtemplates-args-set-toggle": "Set/Unset All",
-    "debugtemplates-args-unused": "Hide/Show Unused",
-    "debugtemplates-args-value-clear": "Clear All",
+    "debugtemplates-args-set-toggle": "Set/unset all",
+    "debugtemplates-args-unused": "Hide/show unused",
+    "debugtemplates-args-value-clear": "Clear all",
     "debugtemplates-args-constructed": "noname",
     "debugtemplates-crumb-title": "Stack of templates you have descended into. You can click on an entry to return to that state.",
     "debugtemplates-crumb-reset": "Clear the stack.",
-    "debugtemplates-error-arg-eval": "Error, could not evaluate argument to template: ",
-    "debugtemplates-error-button": "Clear Msgs",
-    "debugtemplates-error-eval": "Error, could not evaluate input text: ",
-    "debugtemplates-error-parse": "Error, could not parse input text: ",
-    "debugtemplates-error-template-name": "Error, could not determine template name: ",
-    "debugtemplates-error-template-page": "Error, could not load template page: ",
-    "debugtemplates-error-template-revisions": "Error, no page revisions exist for template: ",
-    "debugtemplates-eval": "Eval All",
+    "debugtemplates-error-button": "Clear error messages",
+    "debugtemplates-error-arg-eval": "Error: Could not evaluate argument to template:",
+    "debugtemplates-error-eval": "Error: Could not evaluate input text:",
+    "debugtemplates-error-parse": "Error: Could not parse input text:",
+    "debugtemplates-error-template-name": "Error: Could not determine template name:",
+    "debugtemplates-error-template-page": "Error: Could not load template page:",
+    "debugtemplates-error-template-revisions": "Error: No page revisions exist for template:",
+    "debugtemplates-eval": "Evaluate all",
     "debugtemplates-input": "Input text",
-    "debugtemplates-intro": "This page gives you an interface for debugging the template expansion of some text.  Note that this is still a work in progress!!  But try it out by typing \"<nowiki>{{foo|abc}}</nowiki>\" into the input textarea below.",
+    "debugtemplates-intro": "This page gives you an interface for debugging the template expansion of some text.  Note that this is still a work in progress!  But try it out by typing \"<nowiki>{{foo|abc}}</nowiki>\" into the input text area.",
     "debugtemplates-radio-intro": "Clicking on template or parameter starts will do",
-    "debugtemplates-radio-select": "nothing, or",
-    "debugtemplates-radio-eval": "evaluate, or",
-    "debugtemplates-radio-descend": "descend (if a template).",
-    "debugtemplates-reset": "Undo All Evals",
-    "debugtemplates-undo": "Undo Eval",
-    "debugtemplates-warning-template-not-a-template": "Cannot find template: ",
-    "debugtemplates-warning-template-not-found": "Unknown or built-in template: ",
-    "debugtemplates-output": "Debugging Pane"
+    "debugtemplates-radio-select": "nothing",
+    "debugtemplates-radio-eval": "evaluate",
+    "debugtemplates-radio-descend": "descend into it (if a template).",
+    "debugtemplates-reset": "Undo all evaluations",
+    "debugtemplates-undo": "Undo evaluation",
+    "debugtemplates-warning-template-not-a-template": "Cannot find template:",
+    "debugtemplates-warning-template-not-found": "Unknown template or built-in template:",
+    "debugtemplates-output": "Debugging pane"
 }
