Extend API so frames can be manually specified
This will be used to help properly evaluate parameters when a parameter name is
either constructed or indirectly referenced.  It is similar to the expandtemplates
api call, but simplified and accepting a JSON-encoded frame.

Change-Id: I6ff1a1c8e4639372b2db70636958480a1aafda93

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -42,5 +42,10 @@
 	"debugtemplates-undo": "Button label for the undo button.",
 	"debugtemplates-warning-template-not-a-template": "Warning message that a template invocation is to a non-template.",
 	"debugtemplates-warning-template-not-found": "Warning message that the template was not found as a wiki page.",
-	"debugtemplates-output": "Heading for the debug output pane display."
+	"debugtemplates-output": "Heading for the debug output pane display.",
+    "apihelp-expandframe-description": "API help description displayed in the generic API help page.",
+    "apihelp-expandframe-example-1": "Result of the example API invocation.",
+    "apihelp-expandframe-param-text": "Description of the text parameter.",
+    "apihelp-expandframe-param-frame": "Description of the params parameter.",
+    "apihelp-expandframe-param-title": "Description of the title parameter."
 }
