--- a/i18n/en.json
+++ b/i18n/en.json
@@ -41,5 +41,10 @@
     "debugtemplates-undo": "Undo evaluation",
     "debugtemplates-warning-template-not-a-template": "Cannot find template:",
     "debugtemplates-warning-template-not-found": "Unknown template or built-in template:",
-    "debugtemplates-output": "Debugging pane"
+    "debugtemplates-output": "Debugging pane",
+    "apihelp-expandframe-description": "Expand templates and parameters in wikitext assuming a specific frame context.",
+    "apihelp-expandframe-example-1": "{\"expandframe\":{\"result\":\"b\"}}",
+    "apihelp-expandframe-param-text": "The wikitext to expand.",
+    "apihelp-expandframe-param-frame": "The frame context as a JSON-encoded map between parameter names and values.",
+    "apihelp-expandframe-param-title": "A page title for context."
 }
