API: Split description messages into summary + additional text
See MediaWiki core patch I778bab2b

Change-Id: I79150a5f7329e34de7f0c2422933a6906922c7d7

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -43,6 +43,7 @@
 	"debugtemplates-warning-template-not-found": "Unknown template or built-in template:",
 	"debugtemplates-output": "Debugging pane",
 	"apihelp-expandframe-description": "Expand templates and parameters in wikitext assuming a specific frame context.",
+	"apihelp-expandframe-summary": "Expand templates and parameters in wikitext assuming a specific frame context.",
 	"apihelp-expandframe-example-1": "{\"expandframe\":{\"result\":\"b\"}}",
 	"apihelp-expandframe-param-text": "The wikitext to expand.",
 	"apihelp-expandframe-param-frame": "The frame context as a JSON-encoded map between parameter names and values.",
