Fix apihelp example message
It should contain a helpful text, not the result of the query.

Change-Id: I85e0f5a5b7ccb49d91828b070434ef17796eecbe

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -44,7 +44,7 @@
 	"debugtemplates-output": "Debugging pane",
 	"apihelp-expandframe-description": "Expand templates and parameters in wikitext assuming a specific frame context.",
 	"apihelp-expandframe-summary": "Expand templates and parameters in wikitext assuming a specific frame context.",
-	"apihelp-expandframe-example-1": "{\"expandframe\":{\"result\":\"b\"}}",
+	"apihelp-expandframe-example-1": "Parse wikitext <kbd><nowiki>{{{a}}}</nowiki></kbd> with defined frame context.",
 	"apihelp-expandframe-param-text": "The wikitext to expand.",
 	"apihelp-expandframe-param-frame": "The frame context as a JSON-encoded map between parameter names and values.",
 	"apihelp-expandframe-param-title": "A page title for context."
